# simplex

./: .gitmodules  CMakeLists.txt  README.md  index.html
css/: main.css
include/: collect.h  core.h
js/: Simplex.js  SimplexResult.js  SimplexTable.js  main.js
src/: collect.c  main.c
